@@ -138,8 +138,8 @@ t/13_save_tiff.t
 t/14_save_image.t
 t/151_save_text.t
 t/152_save_utf8.t
-t/16_import_TIFF.t
-t/17_import_multiple_images.t
+t/161_import_TIFF.t
+t/18_import_multiple_images.t
 t/19_import_with_spaces.t
 t/21_rotate.t
 t/22_analyse_blank.t
@@ -148,7 +148,7 @@ t/24_threshold.t
 t/25_negate.t
 t/26_unsharp_mask.t
 t/27_crop.t
-t/28_to_tiff.t
+t/28_to_png.t
 t/29_tesseract.t
 t/30_tesseract_in_thread.t
 t/31_ocropus.t
@@ -169,7 +169,7 @@ t/45_cancel_threshold.t
 t/46_cancel_negate.t
 t/47_cancel_unsharp_mask.t
 t/48_cancel_crop.t
-t/49_cancel_to_tiff.t
+t/49_cancel_to_png.t
 t/50_cancel_tesseract.t
 t/51_cancel_ocropus.t
 t/52_cancel_cuneiform.t
