@@ -7,6 +7,7 @@ gscan2pdf (1.0.1) unstable; urgency=low
                      documents)
     Closes: #651666 (ability to preview saved files)
     Closes: #645322 (No lock after recovery can result in data loss)
+    Closes: #645323 (Imported pages have no thumbnails)
   * Bumped standards to 3.9.2 (no changes required)
 
  --
