@@ -17,6 +17,8 @@
 * Support multiple sessions
   Closes Debian bug #645322
 * Optionally cycle SANE handle after scan
+* Fix import of PDFs with greyscale and colour images
+  Closes Debian bug #645323
 
 
 1.0.0 (16.09.2011):
